# mplgui

./: .gitignore  LICENSE  README.md  install  install_offline  pyproject.toml  setup.py  uninstall
data/default/: preferences.py
data/default/readers/: scatter.py
dev/: find_all_dependencies  increment_version  link_githooks
dev/githooks/: pre-commit  pre-push
mplgui/: __init__.py
mplgui/helpers/: apidecorator.py  messagedecorator.py  versiontracker.py
mplgui/lib/: artistmanager.py  axeshighlight.py  backend.py  menubar.py  message.py  pickler.py  reader.py
mplgui/widgets/: artisthierarchy.py  artistviewer.py  axestoolbar.py  expandbutton.py  message.py  scrolltreeview.py  switchbutton.py  tooltip.py  verticalscrolledframe.py
tests/: Figure 1.mpl  basetest.py  run_all_tests.py  test_backend.py
