[build-system]
requires = [
'setuptools>=68.2.2',
'numpy>=1.21.5',
]
build-backend = "setuptools.build_meta"

[project]
name = "mplgui"
version = '0.0.7'
authors = [
  { name="Roger Hatfull" },
]
description = "Matplotlib Tk GUI"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

